Building a snap from source fails for 111, build errors in angle
Categories
(Core :: Graphics, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox109 | --- | unaffected |
firefox110 | --- | unaffected |
firefox111 | --- | fixed |
People
(Reporter: ke5trel, Assigned: ErichDonGubler)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
The Nightly snap package on the edge channel is currently stuck on version 111.0a1 (2023-01-20).
Output of snap info firefox
:
latest/edge: 111.0a1 2023-01-20 (2293) 196MB
Comment 1•2 years ago
|
||
We have a build break in gfx/angle I'm going to morph this bug to that.
The snap nightly builds have been failing for a few days.
Looking at the build logs, I see errors like
/root/parts/firefox/build/gfx/angle/checkout/src/compiler/translator/SymbolTable_ESSL_autogen.cpp:4337:50: error: no member named 'isnan' in namespace 'sh::BuiltInName'
BuiltInName::isnan,
~~~~~~~~~~~~~^
This is the same as bug 1727087
Updated•2 years ago
|
Updated•2 years ago
|
Comment 2•2 years ago
|
||
:egubler, since you are the author of the regressor, bug 1753349, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 3•2 years ago
|
||
For reference, it appears that :mkaply is referring to build logs like from https://github.com/canonical/firefox-snap/actions/runs/4006192421/jobs/6877431037.
I currently have a patch in open review for this, and am trying to validate the fix locally.
Assignee | ||
Comment 4•2 years ago
|
||
Re-apply D156577, which was forgotten in our recent rebase of ANGLE (orig. performed at 06d250c819ee
and 94699211d97b).
Comment 6•2 years ago
|
||
bugherder |
Assignee | ||
Comment 7•2 years ago
|
||
I can confirm that the nightly snap build seems to be fixed. 🙌🏻
Description
•