Bug 1812260: build(snap): re-apply forgotten `cmath` include in ANGLE codegen (sorry!) r=jgilbert,gfx-reviewers,nical

Re-apply D156577, which was forgotten in our recent rebase of ANGLE (orig. performed at 06d250c819ee
and 94699211d97b).

Differential Revision: https://phabricator.services.mozilla.com/D167815